replace Collections.empty*() with appropriate of() function